fixed footer too low

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -255,7 +255,6 @@ img {
 */
 .container {
     max-width: 982px;
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
